Criação do Showcase (Section inicial)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,16 +14,23 @@
     --blue: #0F74BD;
 }
 
+/* Navbar */
+
 section {
     width: 100%;
-    background-color: var(--black);
 }
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 80%;
     margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding-top: 15px;
 }
 
 .navbar .logo img {
@@ -48,3 +55,48 @@ section {
     border-radius: 20px;
 }
 
+ /* Showcase */
+
+.showcase_container {
+    background-image: url('../img/BACKGROUND\ 01.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    
+    flex-direction: column;
+}
+
+.showcase_container .text_showcase {
+    width: 80%;
+    margin: auto;
+    margin-top: 210px;
+}
+
+.showcase_container .text_showcase h1 {
+    font-size: 4.4rem;
+    color: var(--green);
+    line-height: 70px;
+    margin-bottom: 25px;
+}
+
+.showcase_container .text_showcase h1 span {
+    color: var(--white);
+}
+
+.showcase_container .text_showcase p {
+    color: var(--white);
+    font-size: 1.4rem;
+    margin-bottom: 40px;
+}
+.btn_showcase {
+    display: inline;
+    padding: 8px 20px;
+    background-color: var(--green);
+    border-radius: 30px;
+    color: var(--white);
+    text-decoration: none;
+    font-size: 1.4rem
+}
