--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 :root {
     --white: #fff;
     --black: #333;
+    --gray: #f5f5f5;
     --green: #80CE49;
     --blue: #0F74BD;
 }
@@ -91,7 +92,7 @@ section {
     font-size: 1.4rem;
     margin-bottom: 40px;
 }
-.btn_showcase {
+.btn {
     display: inline;
     padding: 8px 20px;
     background-color: var(--green);
@@ -99,4 +100,121 @@ section {
     color: var(--white);
     text-decoration: none;
     font-size: 1.4rem
+}
+
+.text_showcase i {
+    margin-right: 5px;
+}
+
+.boxer_container {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin-top: 580px;
+}
+
+.boxer_container .squad1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 35%;
+    height: 180px;
+    background-color: var(--green);
+}
+
+.boxer_container .squad1 img {
+    width: 60px;
+}
+
+.boxer_container .squad1 h1 {
+    font-size: 1.5rem;
+    color: var(--white);
+    font-weight: 400;
+    margin-top: 10px;
+}
+
+.squad1:nth-child(2) {
+    background-color: var(--blue);
+}
+
+.squad1:nth-child(1) {
+    border-bottom-left-radius: 30px;
+    border-top-left-radius: 30px;
+}
+
+.squad1:nth-child(3) {
+    border-bottom-right-radius: 30px;
+    border-top-right-radius: 30px;
+}
+
+/* Serviços */
+
+.services_container {
+    margin-top: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    margin-bottom: 50px;
+}
+
+.services_container .title_services {
+    font-size: 2rem;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    color: var(--black);
+}
+
+.services_body {
+    width: 80%;
+    margin: auto;
+    height: 200px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.services_body .services_box {
+    width: 30%;
+    height: 450px;
+    background-color: var(--gray);
+    box-shadow: 1px 1px 5px #888;
+    border-radius: 15px;
+    margin: 20px 10px;
+}
+
+.services_box .services_photo img {
+    width: 90%;
+    margin-top: 10px;
+}
+
+.services_box .services_text {
+    color: var(--black);
+    padding: 0 20px
+}
+
+.services_text span {
+    color: var(--gray);
+}
+
+.services_box .services_text h1 {
+    margin-top: 15px;
+}
+
+.services_box .services_text p {
+    text-align: justify;
+    font-size: 1rem;
+    margin-top: 15px;
+    margin-bottom: 30px;
+
+}
+
+.services_box i {
+    margin-right: 5px;
 }
