--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,8 +265,7 @@ i {
     margin: 20px 10px;
 }
 
-
-
+/* Sobre */
 
 .about {
     width: 100%;
@@ -309,17 +308,13 @@ i {
 }
 
 
-
-
-
-
-
-
-
+/* Missão, Valores */
 
 
 .quest {
     width: 100%;
+    padding-bottom: 60px;
+    padding-top: 60px;
 }
 
 .quest .quest_container {
@@ -348,6 +343,37 @@ i {
     width: 100%;
     font-size: 1rem;
     color: var(--black);
+}
+
+/* Resultados */
+
+.results {
+    width: 100%;
+    padding-top: 50px;
+}
+
+.results .results_container {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.results .results_container .results_text h1 {
+    font-size: 3rem;
+    color: var(--black);
+    margin-bottom: 70px;
+}
+.results .results_container .results_photo {
+    width: 100%;
+    text-align: center;
+}
+
+.results .results_container .results_photo img {
+    width: 80%;
+    border-radius: 30px;
+    box-shadow: 1px 1px 5px #888;
 }
 
 
